# discipline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-graphics.sh  build-hardware.sh  build.sh  prepare.sh  run-all.sh
graphics/: CMakeLists.txt  rebuild.sh  run.sh
graphics/pages/: fx_stack.cpp  home.cpp
graphics/src/: audio-math-utils.cpp  audio-sink-dummy.h  audio-sink-impl.cpp  audio-sink-impl.h  audio-sink-jack.cpp  audio-sink-jack.h  audio-sink.h  audio-utils.h  audio_utils.h  components.cpp  components.h  main.cpp  main.h  osc-server.cpp  osc-server.h
graphics/src/pages/: example2.cpp  fx-stack.cpp  fx-stack.init  home.cpp  synth.cpp  tremolo.cpp
hardware/: CMakeLists.txt
hardware/src/: aux-functions.cpp  main.cpp  main.h
src/: main.cpp  main.h
system_handler/: run.sh
system_handler/src/: handlers.py  jack_utils.py  main.py  server.py  system_utils.py
